
Change Log Update (00.00.05)
* 2015-10-09 Unit Tests 
+ Completed Started Units Test on SessionIO
- Class only 10% covered so far. more to go.
+ Completed 52 passing unit tests.
+ Various tweaks while working unit tests.

Change Log Update (00.00.04)
* 2015-10-09 Unit Tests and Linux Makefiles
+ Updated support and dependencies for Unit Testing.
+ Converted and updated 34 Unit tests for CommonIO.
- Next is to add NEW tests for SessionIO and MenuIO.
+ Updates Linux Makefile(s) for unit tests.  Also removed any
  static paths that were generated from the project.
+ Added missing <stdint.h> in Common_io.hpp.
+ Make sure all unit test cross compile on Linux as well.

Change Log Update (00.00.03)
* 2015-10-08 Code Cleanup.
+ Cleaned up some comments and fixed any left over tab spacing.

Change Log Update (00.00.02)
* 2015-10-08 Added Makefiles for Linux.
+ Ported To Linux for cross compiler testing.
+ Create new Makefile(s) for linux builds
  - make -f Makefile-linux will build all (3) projects in order.
     - SqliteWrapped, xrm-server, xrm-unittests
  - Requires Boost, Pthreads, Sqlite3 libs.  Tested in Ubuntu/Mint
  - Moved compiler flags down from 14 to 11 standards.
+ Made small updates via compiling in linux to code.

Change Log Update (00.00.01)
* 2015-10-08 UnitTests
+ Commented out Tests already pre-written.  I need to go through
  and update all tests to the current layout.

Change Log Update (00.00.00)
* 2015-10-08 Cleanup and Git.
* Moved all Source files to src subfolder.
+ Cleaned up files no longer part of the project.
+ Renamed project files from test to something more descriptive.
+ Added in Unittest++ to start creating and using unit tests.
+ Checked in initial version to GIT. Github will come once more of the base
  is completed.
+ Marking change logs with versions to match GIT
+ Some Cleanup and code break out of the MenuSystem.  Built extension files
  to separate specific menu operations.