@@ -1,9 +1,13 @@
 
+Change Log Update (00.00.06)
+* 2015-10-09 Unit Tests 
++ Updates some Test Names, and Started UnitTests for AnsiProcessor.
+
 Change Log Update (00.00.05)
 * 2015-10-09 Unit Tests 
-+ Completed Started Units Test on SessionIO
++ Started Units Test on SessionIO
 - Class only 10% covered so far. more to go.
-+ Completed 52 passing unit tests.
++ Tested 52 passing unit tests in Win and Linux so far.
 + Various tweaks while working unit tests.
 
 Change Log Update (00.00.04)
